crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '1.e'::jsonpath;"
---
SelectStmt@0..23
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..22
    TypeCast@7..22
      AConst@7..12
        Sconst@7..12 "'1.e'"
      Typecast@12..14 "::"
      TypeName@14..22
        Ident@14..22 "jsonpath"
  Ascii59@22..23 ";"

